--- a/index.html
+++ b/index.html
@@ -7,36 +7,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Model 3|Tesla</title>
+    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/gotham%22"  type="text/css"> 
+
+    <title>Model 3 | Tesla</title>
 </head>
 
 <body>
-    <nav>
-        <figure>
-            <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
-                xmlns="http://www.w3.org/2000/svg%22%3E%3Cpath d=" M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26
-                7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8
-                7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2
-                28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0
-                007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0
-                007-7h-40a9.6 9.6 0 007 7z" fill="currentColor"></path></svg>
-            <!-- <img src="img/car1.jpg" alt="car1"> -->
-        </figure>
-        <ul>
-            <li class="upper_nav_li" id="upper_li1">Model S</li>
-            <li class="upper_nav_li" id="upper_li2">Model 3</li>
-            <li class="upper_nav_li" id="upper_li3">Model X</li>
-            <li class="upper_nav_li" id="upper_li4">Model Y</li>
-            <li class="upper_nav_li" id="upper_li5">Solar Roof</li>
-            <li class="upper_nav_li" id="upper_li6">Solar Panels</li>
-        </ul>
-        <ul>
-            <li class="right_nav_li" id="right_li1">Shop</li>
-            <li class="right_nav_li" id="right_li2">Account</li>
-            <li class="right_nav_li" id="right_li3">Menu</li>
-        </ul>
+    <main id="whole_page" class="vertical--section">
+        <main id="part1" class="vertical--section">
+            <nav class="horizontal--section" id="upper_navbar">
+                <!-- <nav> -->
+                <figure>
+                    <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
+                            fill="currentColor"></path>
+                    </svg>
+                </figure>
+                <!-- <figure> -->
+                <ul class="horizontal--section">
+                    <li class="upper_nav_li" id="upper_li1">Model S</li>
+                    <li class="upper_nav_li" id="upper_li2">Model 3</li>
+                    <li class="upper_nav_li" id="upper_li3">Model X</li>
+                    <li class="upper_nav_li" id="upper_li4">Model Y</li>
+                    <li class="upper_nav_li" id="upper_li5">Solar Roof</li>
+                    <li class="upper_nav_li" id="upper_li6">Solar Panels</li>
+                </ul>
+                <!-- <ul> -->
+                <ul class="horizontal--section">
+                    <li class="right_nav_li" id="right_li1">Shop</li>
+                    <li class="right_nav_li" id="right_li2">Account</li>
+                    <li class="right_nav_li" id="right_li3">Menu</li>
+                </ul>
+            </nav>
+            <aside>
+                <!-- <ul> -->
+                <ul class="vertical--section" >
+                    <li class="sidebar_li" id="sidebar_li1">MODEL 3</li>
+                    <li class="sidebar_li" id="sidebar_li2">SAFETY</li>
+                    <li class="sidebar_li" id="sidebar_li3">PERFORMANCE</li>
+                    <li class="sidebar_li" id="sidebar_li4">ALL-WHEEL DRIVE</li>
+                    <li class="sidebar_li" id="sidebar_li5">RANGE</li>
+                    <li class="sidebar_li" id="sidebar_li6">AUTOPILOT</li>
+                    <li class="sidebar_li" id="sidebar_li7">INTERIOR</li>
+                    <li class="sidebar_li" id="sidebar_li8">SPECS</li>
+                    <li class="sidebar_li" id="sidebar_li9">ORDER</li>
+                </ul>
+            </aside>
+            <header>
+                <h1>Model 3</h1>
+            </header>
+            
+            <footer class="footer1">
+                <ul>
+                    <li class="first_footer_li" id="first_footer_li1">
+                        <h2> 3.1 s 0-60 mph*</h2>
+                    </li>
+                    <li class="first_footer_li" id="first_footer_li2"> 358 mi</li>
+                    <li class="first_footer_li" id="first_footer_li3"></li>
+                    <li class="first_footer_li" id="first_footer_li4"></li>
+                </ul>
+            </footer>
+        </main>
+        <main id="part2" class="horizontal--section">
+            <figure id=skeleton>
+            </figure>
+            <figcaption class="vertical--section">
+                <h3>Safety</h3>
+                <h2>Built for Safety</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
+                    libero!
+                    Qui!
+                </p>
+                <h5></h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
+                    libero!
+                    Qui!
+                </p>
+                <h5></h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
+                    libero!
+                    Qui!
+                </p>
+            </figcaption>
+        </main>
+        <main id="part3" class="vertical--section">
+            <figure id="part3__picture horizontal--section">
 
-    </nav>
+            </figure>
+            <footer id="second_footer" class="horizontal--section">
+                <section id="Quickest Acceleration" class="vertical--section">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi
+                    veniam qui eveniet neque nisi!
+                    Quod
+                    atque repellendus minus placeat odit.
+                </section>
+                <figcaption>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, fugiat saepe ut
+                        repellendus
+                        quo
+                        ullam? Voluptatum atque amet quae dolores quibusdam adipisci quis aliquam ipsam possimus? Iusto,
+                        aperiam
+                        quia officia sequi unde doloribus vero et distinctio reprehenderit optio aut rerum?
+                    </p>
+                </figcaption>
+            </footer>
+        </main>
+    </main>
 </body>
 
 </html>
