--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <main id="part1" class="vertical--section">
             <nav class="horizontal--section" id="upper_navbar">
                 <figure id="upper_navbar__logo">
-                    <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
+                    <!-- <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
                             fill="currentColor"></path>
-                    </svg>
+                    </svg> -->
+                    <img class="logo" src="svg/logo_tesla.svg" alt="">
                 </figure>
                 <ul class="horizontal--section" id="upper_navbar__middle_ul">
                     <li class="upper_nav_li" id="upper_li1">Model S</li>
@@ -40,15 +41,15 @@
             </nav>
             <aside>
                 <ul class="vertical--section" id="aside__ul">
-                    <li class="sidebar_li" id="sidebar_li1">MODEL 3</li>
-                    <li class="sidebar_li" id="sidebar_li2">SAFETY</li>
-                    <li class="sidebar_li" id="sidebar_li3">PERFORMANCE</li>
-                    <li class="sidebar_li" id="sidebar_li4">ALL-WHEEL DRIVE</li>
-                    <li class="sidebar_li" id="sidebar_li5">RANGE</li>
-                    <li class="sidebar_li" id="sidebar_li6">AUTOPILOT</li>
-                    <li class="sidebar_li" id="sidebar_li7">INTERIOR</li>
-                    <li class="sidebar_li" id="sidebar_li8">SPECS</li>
-                    <li class="sidebar_li" id="sidebar_li9">ORDER</li>
+                    <li class="sidebar_li" id="sidebar_li1"><a href="#">|</a> </li>
+                    <li class="sidebar_li" id="sidebar_li2"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li3"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li4"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li5"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li6"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li7"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li8"><a href="#">|</a></li>
+                    <li class="sidebar_li" id="sidebar_li9"><a href="#">|</a></li>
                 </ul>
             </aside>
             <header id="main_header">
@@ -72,39 +73,48 @@
                     </li>
                     <li class="first_footer_li vertical--section" id="first_footer_li4">
                         <h5> ORDER NOW</h5>
-                        
+
                     </li>
                 </ul>
             </footer>
+            <footer id="arrow_down">
+                <!-- <svg class="tds-icon tds-icon-chevron--filled--180" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="#tds-icon-chevron--filled--180"></use>
+                  </svg> -->
+            </footer>
         </main>
         <main id="part2" class="horizontal--section">
-            <figure id="skeleton">
+            <figure id="chassis">
             </figure>
-            <section id="skeleton-text" class="vertical--section">
-                <figcaption id="skeleton-text__upper" class="vertical--section">
+            <section id="chassis-text" class="vertical--section">
+                <figcaption id="chassis-text__upper" class="vertical--section">
                     <h3>Safety</h3>
                     <h2>Built for Safety</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
-                        libero!
-                        Qui!
+                    <p>Safety is the most important part of every Tesla. We design our vehicles to <a href="#"> exceed
+                            safety
+                            standards.</a>
+
                     </p>
-                    <h5></h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
-                        libero!
-                        Qui!
+                    <h5>5-Star Rating</h5>
+                    <p>Model 3 achieved NHTSA 5-star safety ratings in every category and subcategory.
                     </p>
-                    <h5></h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis labore modi quaerat distinctio
-                        libero!
-                        Qui!
+                    <h5>Top Safety Pick+</h5>
+                    <p>Model 3 received the IIHS Top Safety Pick+ award, with top ratings in all crashworthiness and
+                        front crash prevention categories.
                     </p>
                 </figcaption>
-                <figcaption id="skeleton-text__lower" class="horizontal--section">
-                    <h3>
-                        <a href="#">+</a>
-                        <a href="#">LEARN MORE</a>
-                        <a href="#">ORDER NOW</a>
-                    </h3>
+                <figcaption id="chassis-text__lower" class="horizontal--section">
+                    <!-- <h3> -->
+                        <section class="horizontal--section">
+
+                            <button id="learn_more_button">
+                                
+                                <a href="#" id="plus">+</a>
+                                <a href="#" id="learn_more">LEARN MORE</a>
+                            </button>
+                            <a href="#" id="order_now">ORDER NOW</a>
+                        </section>
+                    <!-- </h3> -->
                 </figcaption>
             </section>
         </main>
