--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </section>
         </main>
         <main id="part3" class="vertical--section">
-            <figure id="part3__picture horizontal--section">
+            <figure id="part3__picture" class="horizontal--section">
 
             </figure>
             <footer id="second_footer" class="horizontal--section">
