text sections added

--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
                     <li class="first_footer_li vertical--section" id="first_footer_li2">
                         <h2>358 mi</h2>
                         <h6>Range (EPA est.)</h6>
+                    </li>
                     <li class="first_footer_li vertical--section" id="first_footer_li3">
                         <h2>AWD</h2>
                         <h6>Dual Motor</h6>
                     </li>
-                    <li class="first_footer_li vertical--section" id="first_footer_li4">
+                    <li class="first_footer_li vertical--section " id="first_footer_li4">
                         <h5> ORDER NOW</h5>
 
                     </li>
@@ -103,40 +104,62 @@
                         front crash prevention categories.
                     </p>
                 </figcaption>
-                <figcaption id="chassis-text__lower" class="horizontal--section">
+                <figcaption id="chassis-text__lower" class="horizontal--section order_button">
                     <!-- <h3> -->
-                        <section class="horizontal--section">
+                    <section class="horizontal--section">
 
-                            <button id="learn_more_button">
-                                
-                                <a href="#" id="plus">+</a>
-                                <a href="#" id="learn_more">LEARN MORE</a>
-                            </button>
-                            <a href="#" id="order_now">ORDER NOW</a>
-                        </section>
+                        <button class="learn_more_button">
+
+                            <a href="#" class="plus">+</a>
+                            <a href="#" class="learn_more">LEARN MORE</a>
+                        </button>
+                        <a href="#" class="order_now">ORDER NOW</a>
+                    </section>
                     <!-- </h3> -->
                 </figcaption>
             </section>
         </main>
         <main id="part3" class="vertical--section">
-            <figure id="part3__picture" class="horizontal--section">
-
+            <figure id="part3__picture" class="vertical--section">
+                <ul class="horizontal--section" id="part3__picture_ul">
+                    <li class="first_footer_li vertical--section" id="part3__picture_li1">
+                        <h2> 3.1 s </h2>
+                        <h6>Quickest acceleration—from zero to 60 mph* in as little as 3.1 seconds</h6>
+                    </li>
+                    <li class="first_footer_li vertical--section" id="part3__picture_li2">
+                        <h2>162 mph</h2>
+                        <h6>Improved handling and aerodynamics allow for a top speed of 162 mph</h6>
+                    </li>
+                    <li class="first_footer_li vertical--section" id="part3__picture_li3">
+                        <h2>AWD</h2>
+                        <h6>Dual Motor All-Wheel Drive instantly controls traction and torque, in all weather conditions
+                        </h6>
+                    </li>
+                </ul>
             </figure>
             <footer id="second_footer" class="horizontal--section">
-                <section id="Quickest Acceleration" class="vertical--section">Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sequi
-                    veniam qui eveniet neque nisi!
-                    Quod
-                    atque repellendus minus placeat odit.
+                <section id="second_footer__empty_box"></section>
+                <section id="quickest_acceleration" class="vertical--section">
+                    <p>Performance</p>
+                    <h2>Quickest Acceleration</h2>
+                    <figcaption id="quickest_acceleration__lower" class="horizontal--section order_button">
+                        <!-- <h3> -->
+                        <!-- <section class="horizontal--section" id="quickest_acceleration_section"> -->
+                            <button class="learn_more_button">
+                                <a href="#" class="plus">+</a>
+                                <a href="#" class="learn_more">LEARN MORE</a>
+                            </button>
+                            <a href="#" class="order_now">ORDER NOW</a>
+                        <!-- </section> -->
+                        <!-- </h3> -->
+                    </figcaption>
                 </section>
-                <figcaption>
+                <figcaption id="second_footer__text">
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, fugiat saepe ut
-                        repellendus
-                        quo
-                        ullam? Voluptatum atque amet quae dolores quibusdam adipisci quis aliquam ipsam possimus? Iusto,
-                        aperiam
-                        quia officia sequi unde doloribus vero et distinctio reprehenderit optio aut rerum?
+                        Model 3 comes with the option of dual motor all-wheel drive, 20” Überturbine Wheels and
+                        Performance Brakes for total control in all weather conditions. A carbon fiber spoiler improves
+                        stability at high speeds, all allowing Model 3 to accelerate from 0-60 mph* in as little as 3.1
+                        seconds.
                     </p>
                 </figcaption>
             </footer>
