--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/gotham%22" type="text/css">
-
+    <link rel="stylesheet" href="css/mobile.css" type="text/css">
     <title>Model 3 | Tesla</title>
 </head>
 
@@ -41,7 +41,7 @@
             </nav>
             <aside>
                 <ul class="vertical--section" id="aside__ul">
-                    <li class="sidebar_li" id="sidebar_li1"><a href="#">|</a> </li>
+                    <li class="sidebar_li"><a href="#" id="sidebar_li1">|</a> </li>
                     <li class="sidebar_li" id="sidebar_li2"><a href="#">|</a></li>
                     <li class="sidebar_li" id="sidebar_li3"><a href="#">|</a></li>
                     <li class="sidebar_li" id="sidebar_li4"><a href="#">|</a></li>
@@ -61,7 +61,10 @@
             <footer id="footer1">
                 <ul class="horizontal--section" id="footer1_ul">
                     <li class="first_footer_li vertical--section" id="first_footer_li1">
+                        <!-- <section class="horizontal--section" id="speed-number">
+                            <img class="logo" src="svg/speed-meter.svg" alt=""> -->
                         <h2> 3.1 s </h2>
+                        <!-- </section> -->
                         <h6>0-60 mph*</h6>
                     </li>
                     <li class="first_footer_li vertical--section" id="first_footer_li2">
@@ -84,6 +87,13 @@
                   </svg> -->
             </footer>
         </main>
+        <figure id="message_icon">
+            <button>
+
+                <a href="#"> <img class="message_icon" src="svg/message-us.svg" alt="">
+                </a>
+            </button>
+        </figure>
         <main id="part2" class="horizontal--section">
             <figure id="chassis">
             </figure>
@@ -145,11 +155,11 @@
                     <figcaption id="quickest_acceleration__lower" class="horizontal--section order_button">
                         <!-- <h3> -->
                         <!-- <section class="horizontal--section" id="quickest_acceleration_section"> -->
-                            <button class="learn_more_button">
-                                <a href="#" class="plus">+</a>
-                                <a href="#" class="learn_more">LEARN MORE</a>
-                            </button>
-                            <a href="#" class="order_now">ORDER NOW</a>
+                        <button class="learn_more_button">
+                            <a href="#" class="plus">+</a>
+                            <a href="#" class="learn_more">LEARN MORE</a>
+                        </button>
+                        <a href="#" class="order_now">ORDER NOW</a>
                         <!-- </section> -->
                         <!-- </h3> -->
                     </figcaption>
