--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="css/fontSize.styles.css" type="text/css">
+    <link rel="stylesheet" href="css/colors.styles.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/gotham%22" type="text/css">
     <link rel="stylesheet" href="css/mobile.css" type="text/css">
@@ -17,12 +19,6 @@
         <main id="part1" class="vertical--section">
             <nav class="horizontal--section" id="upper_navbar">
                 <figure id="upper_navbar__logo">
-                    <!-- <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
-                            fill="currentColor"></path>
-                    </svg> -->
                     <img class="logo" src="svg/logo_tesla.svg" alt="">
                 </figure>
                 <ul class="horizontal--section" id="upper_navbar__middle_ul">
@@ -55,16 +51,11 @@
             <header id="main_header">
                 <h1 id="part1_header">Model 3</h1>
             </header>
-            <section id="empty_section">
-
-            </section>
+            <section id="empty_section"> </section>
             <footer id="footer1">
                 <ul class="horizontal--section" id="footer1_ul">
                     <li class="first_footer_li vertical--section" id="first_footer_li1">
-                        <!-- <section class="horizontal--section" id="speed-number">
-                            <img class="logo" src="svg/speed-meter.svg" alt=""> -->
                         <h2> 3.1 s </h2>
-                        <!-- </section> -->
                         <h6>0-60 mph*</h6>
                     </li>
                     <li class="first_footer_li vertical--section" id="first_footer_li2">
@@ -77,19 +68,13 @@
                     </li>
                     <li class="first_footer_li vertical--section " id="first_footer_li4">
                         <h5> ORDER NOW</h5>
-
                     </li>
                 </ul>
             </footer>
-            <footer id="arrow_down">
-                <!-- <svg class="tds-icon tds-icon-chevron--filled--180" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="#tds-icon-chevron--filled--180"></use>
-                  </svg> -->
-            </footer>
+            <footer id="arrow_down"> </footer>
         </main>
         <figure id="message_icon">
             <button>
-
                 <a href="#"> <img class="message_icon" src="svg/message-us.svg" alt="">
                 </a>
             </button>
@@ -104,7 +89,6 @@
                     <p>Safety is the most important part of every Tesla. We design our vehicles to <a href="#"> exceed
                             safety
                             standards.</a>
-
                     </p>
                     <h5>5-Star Rating</h5>
                     <p>Model 3 achieved NHTSA 5-star safety ratings in every category and subcategory.
@@ -115,17 +99,13 @@
                     </p>
                 </figcaption>
                 <figcaption id="chassis-text__lower" class="horizontal--section order_button">
-                    <!-- <h3> -->
                     <section class="horizontal--section">
-
                         <button class="learn_more_button">
-
                             <a href="#" class="plus">+</a>
                             <a href="#" class="learn_more">LEARN MORE</a>
                         </button>
                         <a href="#" class="order_now">ORDER NOW</a>
                     </section>
-                    <!-- </h3> -->
                 </figcaption>
             </section>
         </main>
@@ -153,15 +133,11 @@
                     <p>Performance</p>
                     <h2>Quickest Acceleration</h2>
                     <figcaption id="quickest_acceleration__lower" class="horizontal--section order_button">
-                        <!-- <h3> -->
-                        <!-- <section class="horizontal--section" id="quickest_acceleration_section"> -->
                         <button class="learn_more_button">
                             <a href="#" class="plus">+</a>
                             <a href="#" class="learn_more">LEARN MORE</a>
                         </button>
                         <a href="#" class="order_now">ORDER NOW</a>
-                        <!-- </section> -->
-                        <!-- </h3> -->
                     </figcaption>
                 </section>
                 <figcaption id="second_footer__text">
