--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/gotham%22" type="text/css">
     <link rel="stylesheet" href="css/mobile.css" type="text/css">
+    <link rel="icon" href="svg/Tesla_T_symbol.svg.png">
+
     <title>Model 3 | Tesla</title>
 </head>
 
