--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     </li>
                 </ul>
             </footer>
-            <footer id="arrow_down"> </footer>
+            <footer id="arrow_down">
+            </footer>
         </main>
         <figure id="message_icon">
             <button>
